WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305815
Address more unsafe cast warnings in Source/WebCore/rendering
https://bugs.webkit.org/show_bug.cgi?id=305815
Summary
Address more unsafe cast warnings in Source/WebCore/rendering
Chris Dumez
Reported
2026-01-19 22:01:13 PST
Address more unsafe cast warnings in Source/WebCore/rendering.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-01-19 22:07:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56876
EWS
Comment 2
2026-01-20 04:17:51 PST
Committed
305874@main
(59868a4d261a): <
https://commits.webkit.org/305874@main
> Reviewed commits have been landed. Closing PR #56876 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-20 04:18:15 PST
<
rdar://problem/168494385
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug