Address more unsafe cast warnings in Source/WebCore/rendering https://bugs.webkit.org/show_bug.cgi?id=305815

Reviewed by Anne van Kesteren.

* Source/WebCore/SaferCPPExpectations/MemoryUnsafeCastCheckerExpectations:
* Source/WebCore/rendering/RenderMultiColumnSet.h:
* Source/WebCore/rendering/svg/RenderSVGResourcePattern.cpp:
(WebCore::RenderSVGResourcePattern::createTileImage const):
* Source/WebCore/rendering/svg/SVGRenderTreeAsText.cpp:
(WebCore::writeSVGPaintingResource):
(WebCore::writeChildren):
(WebCore::writeSVGResourceContainer):
(WebCore::writeResources):
* Source/WebCore/rendering/svg/SVGTextQuery.cpp:
(WebCore::SVGTextQuery::Data::Data):
(WebCore::SVGTextQuery::numberOfCharacters const):
(WebCore::TextLengthData::TextLengthData):
(WebCore::SVGTextQuery::textLengthCallback const):
(WebCore::SubStringLengthData::SubStringLengthData):
(WebCore::SVGTextQuery::subStringLengthCallback const):
(WebCore::StartPositionOfCharacterData::StartPositionOfCharacterData):
(WebCore::SVGTextQuery::startPositionOfCharacterCallback const):
(WebCore::EndPositionOfCharacterData::EndPositionOfCharacterData):
(WebCore::SVGTextQuery::endPositionOfCharacterCallback const):
(WebCore::RotationOfCharacterData::RotationOfCharacterData):
(WebCore::SVGTextQuery::rotationOfCharacterCallback const):
(WebCore::ExtentOfCharacterData::ExtentOfCharacterData):
(WebCore::SVGTextQuery::extentOfCharacterCallback const):
(WebCore::CharacterNumberAtPositionData::CharacterNumberAtPositionData):
(WebCore::SVGTextQuery::characterNumberAtPositionCallback const):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceClipper.h:
(isType):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceContainer.h:
(isType):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceFilter.h:
(isType):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceLinearGradient.h:
(isType):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceMarker.h:
(isType):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceMasker.h:
(isType):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourcePattern.h:
(isType):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGResourceRadialGradient.h:
(isType):

Canonical link: https://commits.webkit.org/305874@main